# AutoMem

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
agent/: agent.py  chat_routing.py  memory_store.py  report_utils.py  response_quality.py
agent/skills/: forensics_skill.md  report_skill.md
config/: settings.py
frontend/: app.py  chat_history.py  upload_utils.py
tests/: conftest.py  test_demo_prompts.py  test_hash_evidence.py  test_mcp_http_setup.py  test_mcp_server_helpers.py  test_mcp_tool_contracts.py  test_response_quality.py  test_runner_cache_compaction.py  test_runner_filtering.py  test_runner_preflight.py  test_runner_symbol_dirs.py
volatility_mcp_server/: Dockerfile  __init__.py  __main__.py  server.py
volatility_mcp_server/tools/: __init__.py  runner.py
