[project]
name = "memory-forensics-agent"
version = "1.0.0"
description = "AI Agent for Memory Dump Forensics - FYP Project"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain>=1.2.15",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "deepagents>=0.5.3",
    "langgraph>=1.1.9",
    "streamlit>=1.55.0",
    "fastmcp>=3.2.3",
    "httpx>=0.28.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "config", "frontend", "volatility_mcp_server"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
